// Vitest Snapshot v1

exports[`should expand menu 1`] = `
<div>
  <div
    class="layout"
  >
    <nav
      aria-label="primary"
      class="expanded"
    >
      <button
        aria-label="expand navigation"
        class="icon_button menu_button"
      >
        <svg
          class="lucide lucide-menu"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="4"
            x2="20"
            y1="12"
            y2="12"
          />
          <line
            x1="4"
            x2="20"
            y1="6"
            y2="6"
          />
          <line
            x1="4"
            x2="20"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
      <ul>
        <li
          aria-label="navigate to home"
          class="logo"
        >
          <a>
            cooper reiff
          </a>
        </li>
        <li
          aria-label="navigate to projects"
          class="navlink"
        >
          <a>
            projects
          </a>
        </li>
        <li
          aria-label="navigate to photos"
          class="navlink"
        >
          <a>
            photos
          </a>
        </li>
        <li
          aria-label="navigate to posts"
          class="navlink"
        >
          <a>
            posts
          </a>
        </li>
      </ul>
      <button
        aria-label="toggle dark mode on"
        class="icon_button theme_toggle"
      >
        <svg
          class="lucide lucide-moon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
          />
        </svg>
      </button>
    </nav>
    <main />
  </div>
</div>
`;

exports[`should render 1`] = `
<div>
  <div
    class="layout"
  >
    <nav
      aria-label="primary"
      class=""
    >
      <button
        aria-label="expand navigation"
        class="icon_button menu_button"
      >
        <svg
          class="lucide lucide-menu"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="4"
            x2="20"
            y1="12"
            y2="12"
          />
          <line
            x1="4"
            x2="20"
            y1="6"
            y2="6"
          />
          <line
            x1="4"
            x2="20"
            y1="18"
            y2="18"
          />
        </svg>
      </button>
      <ul>
        <li
          aria-label="navigate to home"
          class="logo"
        >
          <a>
            cooper reiff
          </a>
        </li>
        <li
          aria-label="navigate to projects"
          class="navlink"
        >
          <a>
            projects
          </a>
        </li>
        <li
          aria-label="navigate to photos"
          class="navlink"
        >
          <a>
            photos
          </a>
        </li>
        <li
          aria-label="navigate to posts"
          class="navlink"
        >
          <a>
            posts
          </a>
        </li>
      </ul>
      <button
        aria-label="toggle dark mode on"
        class="icon_button theme_toggle"
      >
        <svg
          class="lucide lucide-moon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"
          />
        </svg>
      </button>
    </nav>
    <main />
  </div>
</div>
`;
